# bcap-x402-payment-middleware

./: .gitignore  Cargo.toml  Makefile  README.md  build-amazon-linux.sh  run-reth.sh
crates/payment-gateway/: Cargo.toml  config.toml.example
crates/payment-gateway/src/: config.rs  database.rs  handlers.rs  main.rs  signature_cache.rs  state.rs
crates/payment-gateway/src/database/: dynamodb.rs  mod.rs  rocksdb.rs
crates/payment-transport/: Cargo.toml
crates/x402-transport/: Cargo.toml
crates/x402-transport/src/: lib.rs
src/: config.rs  state.rs
