[package]
name = "bcap-x402-full-node-middleware"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bcap-x402-middleware"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
x402-rs = "0.9.3"
x402-axum = "0.6.2"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
