[package]
name = "payment-gateway"
version = {workspace = true}
edition = {workspace = true}

[[bin]]
name = "payment-gateway"
path = "src/main.rs"

[dependencies]
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
alloy = "1.1.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
axum = "0.8"
x402-rs = { path = "../../../x402-rs" }
x402-axum = { path = "../../../x402-rs/crates/x402-axum", features = ["telemetry"] }
dotenvy = "0.15"
rocksdb = "0.24"
bincode = "1.3"
hex = "0.4"
once_cell = "1.21.3"
async-trait = "0.1"
aws-config = "1.1"
aws-sdk-dynamodb = "1.11"

[dev-dependencies]
tempfile = "3"
