[package]
name = "payment-transport"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
alloy = "1.1.3"
alloy-transport = "1.1.3"
x402-reqwest = "0.4.0"
tower = "0.5.2"
reqwest-middleware = "0.4.2"
alloy-json-rpc = "1.1.3"
hex = "0.4"

