[package]
name = "x402-transport"
version = { workspace = true}
edition = { workspace = true}

[lib]
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.145"
tokio = { workspace = true}
reqwest = { workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
alloy = "1.1.3"
alloy-transport = "1.1.3"
x402-reqwest = "0.4.0"
tower = "0.5.2"
reqwest-middleware = "0.4.2"
alloy-json-rpc = "1.1.3"
# # alloy = { workspace = true}
# alloy-transport = { workspace = true}
# alloy-json-rpc = { workspace = true}
# reqwest_middleware = { workspace = true}

